monticore-generator/src/test/resources/cocos/invalid/A4059/A4059a.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4059;

grammar A4059a {

  A = token("b-") ;

}
